add Approver Documentation
